# pink-phone

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  thinking.MD  tsconfig.json
.github/workflows/: backfill-release-notes.yml  coverage.yml  dockerhub-cleanup.yml  integration.yml  release.yml
.storybook/: preview.ts
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/migrations/: 0001_init.sql  0002_interactions.sql  0003_notifications.sql  0004_oidc.sql  0005_space_timezone.sql  0006_post_draft.sql  0007_notif_default_ghost.sql  0008_challenge_suggestions.sql  0009_more_challenge_suggestions.sql  0010_last_seen.sql  0011_suggestions_locale_space.sql  0012_suggestions_en.sql  0013_space_reactions.sql  0014_drop_hard_intensity.sql  0015_media_encrypted.sql  0016_blind_mood.sql  0017_session_revocation.sql  0018_oidc_sub_unique.sql  0019_space_invites.sql  0020_posts_updated_at.sql  0021_suggestion_done_hidden.sql  0022_media_download.sql  0023_space_notices.sql  0024_comment_updated_at.sql  0025_post_media.sql  0026_invite_code.sql  0027_post_favorites.sql  0028_desires.sql  0029_evening_menu.sql  0030_love_notes.sql  0031_desire_done.sql  0032_desire_stance.sql
backend/src/: auth.rs  config.rs  error.rs  invite_code.rs  main.rs  models.rs  notifications.rs  pagination.rs  state.rs  tests_integration.rs
backend/src/routes/: auth.rs  challenges.rs  desires.rs  evening_menu.rs  interactions.rs  logs.rs  love_notes.rs  media.rs  mod.rs  moods.rs  notices.rs  notifications.rs  oidc.rs  posts.rs  seen.rs  spaces.rs  suggestions.rs  ws.rs
deploy/: .env.example  README.md  docker-compose.local.yml  docker-compose.yml  dockerhub-api.md  dockerhub-web.md  web-nginx.conf
docs/: index.html
frontend/: .dockerignore  .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts  preview.ts  storybook.css
frontend/scripts/: og-image.mjs  screenshots.mjs
frontend/src/: App.tsx  clientLog.ts  main.tsx  push.ts  releaseNotes.ts  share.ts  sw.js
frontend/src/api/: client.ts  types.ts
frontend/src/app/: LockGate.tsx  Root.tsx  SpaceApp.test.tsx  SpaceApp.tsx  SpaceGate.tsx  currentSpace.test.ts  currentSpace.ts  mappers.test.ts  mappers.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/domain/: types.ts
frontend/src/lib/: biometric.ts  cn.test.ts  confirm.test.ts  confirm.ts  pin.test.ts  pin.ts  time.test.ts  useBackClose.test.ts  useBackClose.ts
frontend/src/mock/: data.ts
frontend/src/test/: setup.ts
frontend/src/types/: view.ts
src/: App.tsx  index.css  main.tsx  push.ts  theme.ts
src/api/: client.ts  types.ts
src/app/: InstallPrompt.tsx  Root.tsx  SpaceApp.tsx  SpaceGate.tsx
src/components/BlogPost/: BlogPost.stories.tsx  BlogPost.tsx
src/components/Button/: Button.tsx
src/components/ChallengeBankManager/: ChallengeBankManager.stories.tsx  ChallengeBankManager.tsx
src/components/ChallengeCard/: ChallengeCard.stories.tsx  ChallengeCard.tsx  challenge.ts
src/components/ChallengeComposer/: ChallengeComposer.stories.tsx  ChallengeComposer.tsx
src/components/CommentsSheet/: CommentsSheet.stories.tsx  CommentsSheet.tsx
src/components/ContextMenu/: ContextMenu.tsx
src/components/FireEmbers/: FireEmbers.stories.tsx  FireEmbers.tsx
src/components/InstallBanner/: InstallBanner.stories.tsx  InstallBanner.tsx
src/components/MoodSelector/: MoodSelector.stories.tsx  MoodSelector.tsx
src/components/PostComposer/: PostComposer.stories.tsx  PostComposer.tsx
src/components/ReactionBar/: ReactionBar.stories.tsx  ReactionBar.tsx
src/components/ReactionSettings/: ReactionSettings.tsx
src/components/SafeMedia/: SafeMedia.stories.tsx  SafeMedia.tsx
src/i18n/: i18next.d.ts  index.ts
src/lib/: cn.ts  time.ts
src/mock/: data.ts
(+157 files in other folders)
