[package]
name = "pinkphone-api"
version = "0.1.0"
edition = "2021"
description = "API Rust/Axum de PinkPhone — Notre Jardin Secret"

[dependencies]
axum = { version = "0.8", features = ["multipart", "macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

jsonwebtoken = "9"
# default features incluent password-hash + rand → OsRng via argon2::password_hash::rand_core
argon2 = { version = "0.5", features = ["std"] }

thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

tokio-util = { version = "0.7", features = ["io"] }
# hyper-client (hyper-tls/OpenSSL) plutôt qu'isahc (libcurl) : le runtime slim a
# déjà libssl3 (via ca-certificates), pas libcurl4.
web-push = { version = "0.10", default-features = false, features = ["hyper-client"] }

# OIDC (Authorization Code + PKCE, implémenté manuellement).
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
